# image-repository

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
image/: forms.py  models.py  views.py
image/migrations/: 0001_initial.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py
rufferuser/: admin.py  apps.py  forms.py  models.py  views.py
rufferuser/migrations/: 0001_initial.py
rufferuser/static/rufferuser/: twip.py
templates/: image.html  index.html  login.html  navbar.html  notifications.html  post.html  register.html  search.html  user.html
