[tool.poetry]
name = "image-repository"
version = "0.1.0"
description = "Image Repository built with Django"
authors = ["amourtos <amourtos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
